# aoc

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  composer.json  pyproject.toml  run.sh  run_commands.sh
src/: Util.php  application.php
src/Year2023/: Util.php  application.php
src/Year2023/Day01/: AdventCommand.php  Day01Command.php  bonus.py
src/Year2023/Day02/: AdventCommand.php  Day02Command.php
src/Year2023/Day03/: AdventCommand.php
src/Year2023/Day04/: AdventCommand.php
src/Year2023/Day05/: AdventCommand.php
src/Year2023/Day06/: AdventCommand.php
src/Year2023/Day07/: AdventCommand.php
src/Year2023/Day08/: AdventCommand.php
src/Year2023/Day09/: AdventCommand.php
src/Year2023/Day10/: AdventCommand.php
src/Year2024/: aoc.py  application.py  util.py
src/Year2024/Day01/: main.py
src/Year2024/Day02/: main.py
src/Year2024/Day02/input/: prod.txt
src/Year2024/Day03/: main.py
